# SIID

./: .gitignore  CITATION.cff  CLAUDE.md  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml  render-poster.sh
methods/: MAET.md
notebooks/: 01.load_data.ipynb  02.EDA.ipynb  03.model.ipynb
poster/: poster.qmd  references.bib  typst-gather.toml
poster/_extensions/quarto-ext/poster/: _extension.yml  typst-template.typ
report/: report.html  report.qmd  report.quarto_ipynb  report.quarto_ipynb_1  report.quarto_ipynb_2  report.tex
report/report/: report.html
report/report_files/libs/bootstrap/: bootstrap-c828ef22e261896bf08411c83b8e8702.min.css
src/: load_data.py
